Xbim.Geometry.Engine.Native/include/xbim_geometry_api.h

typedef struct XbimContext_*        XbimContextHandle;
typedef struct XbimShape_*          XbimShapeHandle;
typedef struct XbimLocation_*       XbimLocationHandle;
typedef struct XbimSurface_*        XbimSurfaceHandle;
typedef int XbimResult;
XBIM_EXPORT XbimResult XBIM_CALL xbim_solid_build_fixed_reference_swept(
    XbimContextHandle   ctx,
    XbimShapeHandle     faceHandle,
    XbimShapeHandle     directrixHandle,
    double refSurfaceOriginX, double refSurfaceOriginY, double refSurfaceOriginZ,
    double refSurfaceNormalX, double refSurfaceNormalY, double refSurfaceNormalZ,
    int    isPlanarReferenceSurface,
    double precision,
    XbimLocationHandle  locationHandle,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_solid_build_sectioned_spine(
    XbimContextHandle        ctx,
    XbimShapeHandle          spineHandle,
    const XbimShapeHandle*   sectionHandles,
    int                      numSections,
    double                   precision,
    XbimShapeHandle*         outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_solid_build_surface_curve_swept(
    XbimContextHandle   ctx,
    XbimShapeHandle     faceHandle,
    XbimShapeHandle     directrixHandle,
    XbimSurfaceHandle   surfaceHandle,
    int                 isPlanarReferenceSurface,
    double              precision,
    XbimLocationHandle  locationHandle,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_rectangle(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double xDim,    double yDim,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_circle(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double radius,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_ellipse(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double semiAxis1, double semiAxis2,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_rounded_rectangle(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double xDim,    double yDim,    double roundingRadius,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_ishape(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double overallWidth, double overallDepth,
    double webThickness, double flangeThickness,
    double filletRadius,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_lshape(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double depth, double width, double thickness,
    double filletRadius, double edgeRadius, double legSlope,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_tshape(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double depth, double flangeWidth,
    double webThickness, double flangeThickness,
    double filletRadius, double flangeEdgeRadius, double webEdgeRadius,
    double flangeSlope, double webSlope,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_ushape(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double depth, double flangeWidth,
    double webThickness, double flangeThickness,
    double filletRadius, double edgeRadius, double flangeSlope,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_zshape(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double depth, double flangeWidth,
    double webThickness, double flangeThickness,
    double filletRadius, double edgeRadius,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_cshape(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double depth, double width, double wallThickness,
    double girth, double internalFilletRadius,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_trapezium(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double bottomXDim, double topXDim, double yDim, double topXOffset,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_asymmetric_ishape(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double bottomFlangeWidth, double overallDepth,
    double webThickness, double bottomFlangeThickness,
    double topFlangeWidth, double topFlangeThickness,
    double bottomFlangeFilletRadius, double topFlangeFilletRadius,
    double bottomFlangeEdgeRadius, double topFlangeEdgeRadius,
    double bottomFlangeSlope, double topFlangeSlope,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_rectangle_hollow(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double xDim,    double yDim,    double wallThickness,
    double innerFilletRadius, double outerFilletRadius,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_circle_hollow(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double radius,  double wallThickness,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_arbitrary_closed(
    XbimContextHandle ctx,
    const double*     pointsX,
    const double*     pointsY,
    int               pointCount,
    XbimShapeHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_arbitrary_open(
    XbimContextHandle ctx,
    const double*     pointsX,
    const double*     pointsY,
    int               pointCount,
    XbimShapeHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_with_voids(
    XbimContextHandle      ctx,
    XbimShapeHandle        outerFaceHandle,
    const XbimShapeHandle* innerWireHandles,
    int                    numInnerWires,
    XbimShapeHandle*       outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_composite(
    XbimContextHandle      ctx,
    const XbimShapeHandle* profileHandles,
    int                    numProfiles,
    XbimShapeHandle*       outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_derived(
    XbimContextHandle ctx,
    XbimShapeHandle   parentHandle,
    double m00, double m01, double m02,
    double m10, double m11, double m12,
    int               isNonUniformScale,
    XbimShapeHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_profile_build_mirrored(
    XbimContextHandle ctx,
    XbimShapeHandle   parentHandle,
    XbimShapeHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_boolean_union(
    XbimContextHandle   ctx,
    XbimShapeHandle     bodyHandle,
    XbimShapeHandle     toolHandle,
    double              fuzzyTolerance,
    int*                outHasWarnings,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_boolean_cut(
    XbimContextHandle   ctx,
    XbimShapeHandle     bodyHandle,
    XbimShapeHandle     toolHandle,
    double              fuzzyTolerance,
    int*                outHasWarnings,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_boolean_intersect(
    XbimContextHandle   ctx,
    XbimShapeHandle     bodyHandle,
    XbimShapeHandle     toolHandle,
    double              fuzzyTolerance,
    int*                outHasWarnings,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_boolean_section(
    XbimContextHandle   ctx,
    XbimShapeHandle     bodyHandle,
    XbimShapeHandle     faceHandle,
    double              tolerance,
    XbimShapeHandle*    outHandle);