Xbim.Geometry.Engine.Interop/Internal/XbimGeometryNativeApi.cs


        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_solid_build_fixed_reference_swept(
            NativeContextHandle ctx,
            NativeShapeHandle faceHandle,
            NativeShapeHandle directrixHandle,
            double refSurfaceOriginX, double refSurfaceOriginY, double refSurfaceOriginZ,
            double refSurfaceNormalX, double refSurfaceNormalY, double refSurfaceNormalZ,
            int isPlanarReferenceSurface,
            double precision,
            NativeLocationHandle locationHandle,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_solid_build_sectioned_spine(
            NativeContextHandle ctx,
            NativeShapeHandle spineHandle,
            [In] IntPtr[] sectionHandles,
            int numSections,
            double precision,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_solid_build_surface_curve_swept(
            NativeContextHandle ctx,
            NativeShapeHandle faceHandle,
            NativeShapeHandle directrixHandle,
            NativeSurfaceHandle surfaceHandle,
            int isPlanarReferenceSurface,
            double precision,
            NativeLocationHandle locationHandle,
            out NativeShapeHandle outHandle);

        #endregion

        #region Profiles

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_rectangle(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double xDim, double yDim,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_circle(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double radius,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_ellipse(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double semiAxis1, double semiAxis2,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_rounded_rectangle(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double xDim, double yDim, double roundingRadius,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_ishape(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double overallWidth, double overallDepth,
            double webThickness, double flangeThickness,
            double filletRadius,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_lshape(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double depth, double width, double thickness,
            double filletRadius, double edgeRadius, double legSlope,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_tshape(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double depth, double flangeWidth,
            double webThickness, double flangeThickness,
            double filletRadius, double flangeEdgeRadius, double webEdgeRadius,
            double flangeSlope, double webSlope,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_ushape(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double depth, double flangeWidth,
            double webThickness, double flangeThickness,
            double filletRadius, double edgeRadius, double flangeSlope,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_zshape(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double depth, double flangeWidth,
            double webThickness, double flangeThickness,
            double filletRadius, double edgeRadius,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_cshape(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double depth, double width, double wallThickness,
            double girth, double internalFilletRadius,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_trapezium(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double bottomXDim, double topXDim, double yDim, double topXOffset,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_asymmetric_ishape(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double bottomFlangeWidth, double overallDepth,
            double webThickness, double bottomFlangeThickness,
            double topFlangeWidth, double topFlangeThickness,
            double bottomFlangeFilletRadius, double topFlangeFilletRadius,
            double bottomFlangeEdgeRadius, double topFlangeEdgeRadius,
            double bottomFlangeSlope, double topFlangeSlope,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_rectangle_hollow(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double xDim, double yDim, double wallThickness,
            double innerFilletRadius, double outerFilletRadius,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_circle_hollow(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double radius, double wallThickness,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_arbitrary_closed(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] double[] pointsX,
            [MarshalAs(UnmanagedType.LPArray)] double[] pointsY,
            int pointCount,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_arbitrary_open(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] double[] pointsX,
            [MarshalAs(UnmanagedType.LPArray)] double[] pointsY,
            int pointCount,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_with_voids(
            NativeContextHandle ctx,
            NativeShapeHandle outerFaceHandle,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] innerWireHandles,
            int numInnerWires,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_composite(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] profileHandles,
            int numProfiles,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_derived(
            NativeContextHandle ctx,
            NativeShapeHandle parentHandle,
            double m00, double m01, double m02,
            double m10, double m11, double m12,
            int isNonUniformScale,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_profile_build_mirrored(
            NativeContextHandle ctx,
            NativeShapeHandle parentHandle,
            out NativeShapeHandle outHandle);

        #endregion

        #region Boolean Operations

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_boolean_union(
            NativeContextHandle ctx,
            NativeShapeHandle bodyHandle,
            NativeShapeHandle toolHandle,
            double fuzzyTolerance,
            out int outHasWarnings,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_boolean_cut(
            NativeContextHandle ctx,
            NativeShapeHandle bodyHandle,
            NativeShapeHandle toolHandle,
            double fuzzyTolerance,
            out int outHasWarnings,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_boolean_intersect(
            NativeContextHandle ctx,
            NativeShapeHandle bodyHandle,
            NativeShapeHandle toolHandle,
            double fuzzyTolerance,
            out int outHasWarnings,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_boolean_section(
            NativeContextHandle ctx,
            NativeShapeHandle bodyHandle,
            NativeShapeHandle faceHandle,
            double tolerance,
            out NativeShapeHandle outHandle);

        #endregion

        #region Half-Space Operations
